connect resource to frontend